--- a/Liqi Challenge.ipynb
+++ b/Liqi Challenge.ipynb
@@ -859,7 +859,7 @@
     "  </ul>\n",
     "  <li><b>Liquidity Metrics</b></li>\n",
     "  <ul>\n",
-    "    <li>Current Ratio = (total liquid assets (#16) + total inventories(#10) + total receivables (#22) + total receivables from shareholders(#4) + active installments and prepayments(#8)) / current liabilities (#28)</li>\n",
+    "    <li>Current Ratio = (total liquid assets (#16) + total inventories(#10) + total receivables (#22) + total receivables from shareholders(#4) + active installments and prepayments(#8)+ receivables due within the following year (#22)) / current liabilities (#28)</li>\n",
     "    <li>Quick ratio = ( total liquid assets (#16) + total receivables (#22) + Installments and prepayments(#8) + total inventories(#10)) / Current Liabilities(#28)</li>\n",
     "  </ul>\n",
     "  <li><b>Profitability Metrics</b></li>\n",
